# MachineLearning

./: .gitignore  1d_animation.py  2d_animation.py  CLAUDE.md  CONTRIBUTING.md  README.md  ardan_temp.py  calcs.ipynb  datascience.py  grading.ipynb  main.py  ppo.py  pyproject.toml  requirements.txt  requirements_old.txt  testing.py  todo.md
.github/: dependabot.yml
.github/workflows/: tests.yml
EDA/: data_exploration.ipynb
agents/: __init__.py  dqn.py  ppo.py  test_dqn.py  train_dqn.py
agents/old/: test_dqn.py
animations/: 2d_currentanimation.py  2d_gridanimation.py
environments/: __init__.py  constants.py
environments/core/: atmosphere.py  balloon.py  wind_field.py
environments/envs/: __init__.py  atmosphere.py  balloon.py  balloon_3d_env.py  balloon_env.py  loon.py  loon_env.py  reward.py
environments/envs/old/: balloon_1d_env.py  balloon_2d_env.py
environments/render/: pygame_render.py
environments/wrappers/: policy.py
loon_v0/envs/: __init__.py  loon.py
loon_v0/wrappers/: __init__.py
model_saves/: ppo.pt
models/dqn_model/: dqn_balloon_model.pth  evaluations.npz
models/ppo_model/: evaluations.npz
notes/: altitude_control_instability.md  initial_conditions.md  reward_design_and_rl_incentives.md
rl_prototype/: balloon_env.py  dqn_agent.py  dqn_balloon_model.pth  train.py
src/agents/: ppo.py  qrdqn.py  utils.py
src/agents/old/: dqn.py  dqn_agent.py  test_dqn.py  train_dqn.py
src/environments/: __init__.py  winds.json
src/environments/core/: atmosphere.py  balloon.py  constants.py  jit_kernels.py  reward.py  wind_field.py
src/environments/envs/: __init__.py  balloon_3d_env.py  reward.py
src/environments/envs/old/: balloon_1d_env.py  balloon_2d_env.py
src/environments/render/: pygame_render.py
src/environments/wrappers/: __init__.py  decision_interval.py
src/models/ppo_model/: eval_monitor.csv  evaluations.npz  train_monitor.monitor.csv
src/models/ppo_model/PPO_run_dim1_1/: events.out.tfevents.1760091920.Dell.13063.0
src/models/qr_dqn_model/: eval_monitor.csv  evaluations.npz  train_monitor.monitor.csv
src/models/qr_dqn_model/QRDQN_run_dim1_1/: events.out.tfevents.1760099974.Dell.69096.0
src/models/qr_dqn_model/QRDQN_run_dim1_2/: events.out.tfevents.1760101230.Dell.77634.0
src/models/qr_dqn_model/QRDQN_run_dim3_1/: events.out.tfevents.1770306721.Ardan.261120.0
src/models/qr_dqn_model/QRDQN_run_dim3_10/: events.out.tfevents.1770915137.tidemaker.1281202.0
src/models/qr_dqn_model/QRDQN_run_dim3_11/: events.out.tfevents.1770918820.tidemaker.1292075.0
src/models/qr_dqn_model/QRDQN_run_dim3_12/: events.out.tfevents.1770970700.tidemaker.1441927.0
src/models/qr_dqn_model/QRDQN_run_dim3_13/: events.out.tfevents.1770975133.tidemaker.1453926.0
src/models/qr_dqn_model/QRDQN_run_dim3_14/: events.out.tfevents.1771512148.tidemaker.3120113.0
src/models/qr_dqn_model/QRDQN_run_dim3_15/: events.out.tfevents.1771516558.tidemaker.3132012.0
src/models/qr_dqn_model/QRDQN_run_dim3_18/: events.out.tfevents.1772092670.tidemaker.563346.0
src/models/qr_dqn_model/QRDQN_run_dim3_2/: events.out.tfevents.1770331937.Dell.211110.0
src/models/qr_dqn_model/QRDQN_run_dim3_3/: events.out.tfevents.1770365414.Dell.419233.0
src/models/qr_dqn_model/QRDQN_run_dim3_4/: events.out.tfevents.1770365432.Dell.419311.0
src/models/qr_dqn_model/QRDQN_run_dim3_5/: events.out.tfevents.1770414978.Dell.571120.0
src/models/qr_dqn_model/QRDQN_run_dim3_6/: events.out.tfevents.1770463463.Dell.743013.0
src/models/qr_dqn_model/QRDQN_run_dim3_7/: events.out.tfevents.1770543272.Dell.876476.0
src/models/qr_dqn_model/QRDQN_run_dim3_8/: events.out.tfevents.1770881566.tidemaker.1069026.0
src/models/qr_dqn_model/QRDQN_run_dim3_9/: events.out.tfevents.1770886202.tidemaker.1081639.0
testing/: testing.py
tests/: check_install.py  conftest.py  envs_test.py  test_dependency_compat.py  will_temp.py
tests/agents/: test_utils.py
tests/core/: test_atmosphere.py  test_balloon.py  test_balloon_sp.py  test_reward.py  test_wind_field.py
tests/envs/: test_balloon_3d_env.py  test_observation.py
tests/integration/: test_episodes.py
