[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "project-stratus"
version = "0.1.0"
description = "Reinforcement learning agents and environments for Project Stratus balloon station-keeping."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "cloudpickle==3.1.1",
  "contourpy==1.3.1",
  "cycler==0.12.1",
  "farama-notifications==0.0.4",
  "filelock==3.20.3",
  "fonttools==4.60.2",
  "fsspec==2025.2.0",
  "gymnasium==1.0.0",
  "jinja2==3.1.6",
  "kiwisolver==1.4.8",
  "markupsafe==3.0.2",
  "matplotlib==3.10.0",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "numba>=0.60,<0.62",
  "numpy==2.2.2",
  "packaging==24.2",
  "pandas==2.2.3",
  "pillow==11.1.0",
  "pygame==2.6.1",
  "pyparsing==3.2.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.1",
  "six==1.17.0",
  "stable-baselines3[extra]==2.5.0",
  "sb3-contrib==2.5.0",
  "sympy==1.13.3",
  "torch==2.8.0",
  "triton==3.4.0",
  "typing_extensions==4.12.2",
  "tzdata==2025.1",
  "tensorboard>=2.12,<3.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest",
  "pyqt5>=5.15",
  "opencv-python-headless>=4.10.0.84",
]
gpu = [
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cuda-cupti-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cudnn-cu12==9.10.2.21",
  "nvidia-cufft-cu12==11.3.3.83",
  "nvidia-curand-cu12==10.3.9.90",
  "nvidia-cusolver-cu12==11.7.3.90",
  "nvidia-cusparse-cu12==12.5.8.93",
  "nvidia-cusparselt-cu12==0.7.1",
  "nvidia-nccl-cu12==2.27.3",
  "nvidia-nvjitlink-cu12==12.8.93",
  "nvidia-nvtx-cu12==12.8.90",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/agents",
  "src/environments",
  "src/models",
  # REMINDER: Do not list src and ensure src/__init__.py does NOT exist
  ]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:pygame.pkgdata",
    "ignore::tqdm.TqdmExperimentalWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]