[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "project-stratus"
version = "0.1.0"
description = "Reinforcement learning agents and environments for Project Stratus balloon station-keeping."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "cloudpickle==3.1.2",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "farama-notifications==0.0.4",
  "filelock==3.21.2",
  "fonttools==4.61.1",
  "fsspec==2025.2.0",
  "gymnasium==1.0.0",
  "jinja2==3.1.6",
  "kiwisolver==1.4.9",
  "markupsafe==3.0.3",
  "matplotlib==3.10.8",
  "mpmath==1.3.0",
  "networkx==3.6.1",
  "numba>=0.60,<0.62",
  "numpy==2.4.2",
  "packaging==24.2",
  "pandas==2.2.3",
  "pillow==11.1.0",
  "pygame==2.6.1",
  "pyparsing==3.3.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "six==1.17.0",
  "stable-baselines3[extra]==2.7.1",
  "sb3-contrib==2.5.0",
  "sympy==1.14.0",
  "torch==2.8.0",
  "triton==3.4.0",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
  "tensorboard>=2.12,<3.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest",
  "pyqt5>=5.15",
  "opencv-python-headless>=4.10.0.84",
]
gpu = [
  "nvidia-cublas-cu12==12.8.4.1",
  "nvidia-cuda-cupti-cu12==12.8.90",
  "nvidia-cuda-nvrtc-cu12==12.8.93",
  "nvidia-cuda-runtime-cu12==12.8.90",
  "nvidia-cudnn-cu12==9.10.2.21",
  "nvidia-cufft-cu12==11.3.3.83",
  "nvidia-curand-cu12==10.3.9.90",
  "nvidia-cusolver-cu12==11.7.3.90",
  "nvidia-cusparse-cu12==12.5.8.93",
  "nvidia-cusparselt-cu12==0.7.1",
  "nvidia-nccl-cu12==2.27.3",
  "nvidia-nvjitlink-cu12==12.8.93",
  "nvidia-nvtx-cu12==12.8.90",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/agents",
  "src/environments",
  "src/models",
  # REMINDER: Do not list src and ensure src/__init__.py does NOT exist
  ]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:pygame.pkgdata",
    "ignore::tqdm.TqdmExperimentalWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]